rules modal background for mobile more blurred. Font size for nonactive player changed to avoid the thing where overall score stacks as two lines instead of one'

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
   text-align: center;
   padding: 2rem;
   background-color: rgba(185, 129, 192, 0.5);
-  backdrop-filter: blur(10rem);
+  backdrop-filter: blur(100rem);
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.4);
   /* text-shadow: 0 1rem 2rem var(--light-pink); */
   /* text-shadow: 1rem 2rem 2rem white; */
@@ -222,13 +222,14 @@ footer a:focus {
     height: 100dvh;
   }
 
+
   .current,
   .overall {
     width: fit-content;
-    padding: .2rem 2rem;
+    padding: .2rem .75rem;
     margin: 4px auto;
+    font-size: .75rem;
   }
-
 
   .player {
     margin: 0 auto;
@@ -245,11 +246,16 @@ footer a:focus {
     width: 85%;
   }
 
+  .player--active .overall,
+  .player--active .current {
+    font-size: 1rem;
+  }
+
   .player--winner {
     transition: all 0.7s;
     background-color: var(--yellow);
     color: var(--purp-dark);
-    box-shadow: 2px 2px 12px var(--yellow-orange);
+    box-shadow: 2px 2px 12px var(--darker-yellow);
     width: 90%;
     padding: .4rem;
   }
